	* README: Fixed a bogus WWW address and add the address of ACT
 	Europe GLADE page.

Thu Mar 13 17:18:45 1997  Laurent Pautet  <pautet@esmeralda.enst.fr>

	* configure.in: Add Examples/LightBank.

	* configure: Modified (configure.in).

Fri Mar 21 11:34:38 1997  Samuel Tardieu  <sam@zaphod.enst.fr>

	* aclocal.m4: Automatically generated by automake 1.1m.

	* missing: New file.
	
Sat Mar  8 17:40:31 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* configure.in: Add Bank to the list of Makefiles to configure.

Fri Mar  7 18:54:11 1997  Laurent Pautet  <pautet@inf.enst.fr>

	* configure.in, configure: Add --with-remsh to set the rsh command
 	we use.

Fri Feb 28 15:00:11 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Standard help strings for --with-filters and
	  --with-protocols.

Wed Feb 26 10:45:18 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* configure.in: Reduce the effort of a third party to
 	add a new filter. The third party just have to provide a
 	Makefile.<filter>.

Fri Feb 21 19:36:39 1997  Laurent Pautet  <pautet@quasimodo.enst.fr>

	* configure.in: Add zip filtering. Z library is now included in
 	the release. By default, it is not installed but with
 	--with-filters="zip", the Z library is included in garlic library
 	and Z binding and filter are also included.

Fri Feb 14 11:36:11 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Use \${top_srcdir}/dir when building with VPATH
	  and relative $top_srcdir.

Thu Feb 13 12:11:26 1997  Samuel Tardieu  <sam@inf.enst.fr>

	* configure.in: Test for non-blocking I/Os when compiling the TCP
	  module to avoid sometimes trying to compile a non-compilable file.

Wed Feb 12 10:49:41 1997  Laurent Pautet  <pautet@lglsun11.epfl.ch>

	* README (Introduction): Typo.

Tue Feb 11 10:18:20 1997  Laurent Pautet <pautet@inf.enst.fr>
Tue Feb 11 10:18:20 1997  Laurent Pautet <pautet@inf.enst.fr>
	* README (Introduction): Change references to mailing lists.
	  Suppress last 2 paragraphs.
