@@ -12,6 +12,7 @@ AM_INIT_AUTOMAKE
 #
 AC_CHECK_PROGS(AWK, [gnuawk gawk awk])
 AC_PROG_CC
+AM_CYGWIN32
 AC_PROG_RANLIB
 AC_CHECK_PROGS(SED, [gnused gsed sed])
 AC_CHECK_PROGS(SSH, [ssh])
